# Sistema-Motel

./: .env.example  .gitignore  API_CONTRACT.md  ARCHITECTURE.md  AUTENTICACAO.md  CHANGELOG.md  CLAUDE.md  MAPA_DO_PROJETO.md  PROPOSTA-PARAISO.md  README.md  RELEASE.md  package-lock.json  package.json  prompt_claude_code_v2_completo.md  prompt_logica_cobranca_final.md
.claude/: settings.local.json
scripts/: release.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  db.rs  logger.rs  mod.rs  stone.rs  sync.rs
src/app/auditoria/: index.tsx
src/app/checkin/: index.tsx
src/app/checkout/: index.tsx
src/app/estoque/: index.tsx
src/app/home/: index.tsx
src/app/login/: index.tsx
src/app/quartos/: index.tsx
src/app/turno/: index.tsx
src/components/: AppHeader.tsx  BigButton.tsx  PermissionGate.tsx  PinModal.tsx  StatusBar.tsx  SuiteMap.tsx  SwapRoomModal.tsx  SwapWindowTimer.tsx
src/lib/: cobranca.ts  logger.ts  offline.ts  permissions.ts  store.ts  suiteStatus.ts  supabase.ts  tauri.ts  updater.ts
src/types/: dashboard.ts  index.ts
supabase/: fixup_pgcrypto_manager.sql  migration_v2.sql  migration_v3.sql  migration_v4.sql  migration_v5.sql  migration_v6.sql  migration_v7.sql  rate_limit_pin.sql  schema.sql  seed.sql
